# syscrypto

./: .gitignore  CMakeLists.txt  README.md
include/syscrypto/: bytes.h  bytes_span.h  mem.h  pkc.h  platform.h  sec_allocator.h  skc.h  syscrypto.h
include/syscrypto/impl/: mem.impl  skc.impl  utils.h
include/syscrypto/impl/unix/: mem_unix.h
include/syscrypto/impl/windows/: mem_win.h  win_skc.h  win_utils.h
test/: test.cpp
